libs/bng/test/negative/N0306_compartment_in_seed_species_not_defined2.bngl
# FAIL
# OUTPUT: error: Compartment 'C' used in seed species was not defined.



begin compartments
   B 3 1 
end compartments

begin molecule types
   A
end molecule types

begin seed species
   @C:A 1
end seed species

